--- a/package.json
+++ b/package.json
@@ -1,42 +1,21 @@
 {
-  "name": "heenajoshibhagwatapp",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.6.0",
-    "gsap": "^3.6.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.0",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-simple-animate": "^3.3.12",
-    "web-vitals": "^1.1.2"
-  },
+  "name": "dataserver",
+  "version": "1.0.0",
+  "description": "Create-react-app with Express",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "Dipika Mahashabde",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.4",
+    "cowsay": "^1.3.1",
+    "express": "^4.17.1",
+    "pg": "^8.6.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "engines": {
+    "node": "10.5.0"
   }
 }
